--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,73 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2024-02-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5306098'>migrate absl::string_view to std::string_view in services/sharing/nearby/platform</a></td><td>Nivedan Sharma</td></tr>
+<tr><td>2024-02-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5076195'>Replace char[] with std::string_view in constants.h</a></td><td>Chakshu Pragya</td></tr>
+<tr><td>2024-02-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5069356'>css: Expose length attribute of CSSKeyframesRule</a></td><td>Amos Lim</td></tr>
+<tr><td>2024-02-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5301040'>Remove &lt;chrono&gt;[banned] from context_cache_controller</a></td><td>Sakib Shabir Tantray</td></tr>
+<tr><td>2024-02-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5302483'>Replace to_string with base::NumberToString</a></td><td>Sakib Shabir Tantray</td></tr>
+<tr><td>2024-02-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5301039'>migrate absl::optional to std::optional in components/history/core/browser</a></td><td>Sakib Shabir Tantray</td></tr>
+<tr><td>2024-02-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/3990805'>[Code Health] Add unittest for SelfDeletingURLLoaderFactory</a></td><td>Shubham Gupta</td></tr>
+<tr><td>2024-02-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5247349'>Fix nullptr references in permission code</a></td><td>Shubham Gupta</td></tr>
+<tr><td>2024-02-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5210913'>Focus root editable element to start stylus writing</a></td><td>syed.wajid</td></tr>
+<tr><td>2024-01-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5215293'>[base] Remove base::Erase()/base::EraseIf() overloads for std::map</a></td><td>K. M. Merajul Arefin</td></tr>
+<tr><td>2024-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5149200'>Convert enum to enum class for LaunchResult:State</a></td><td>K. M Merajul Arefin</td></tr>
+<tr><td>2024-01-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5201526'>Use std::string Base64Encode(StringPiece input)</a></td><td>Binoy Kumar Sutradhar</td></tr>
+<tr><td>2024-01-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5124965'>Start Android Stylus handwriting after edit element is focused</a></td><td>syed.wajid</td></tr>
+<tr><td>2024-01-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5154731'>Use base::Contains instead of std::find</a></td><td>K. M Merajul Arefin</td></tr>
+<tr><td>2024-01-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5148758'>Use std::string Base64Encode(StringPiece input) instead of void Base64Encode(StringPiece input, std::string* output)</a></td><td>Binoy Kumar Sutradhar</td></tr>
+<tr><td>2024-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5157009'>Use std::erase[_if]</a></td><td>K. M Merajul Arefin</td></tr>
+<tr><td>2024-01-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5183038'>[webview] Include Manage apps text selection menu string</a></td><td>anukul.chand</td></tr>
+<tr><td>2024-01-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5151747'>Use base::ranges::transform() instead std::transform in //components and //content</a></td><td>Binoy Kumar Sutradhar</td></tr>
+<tr><td>2024-01-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5154972'>Used `std::string base::Base64Encode(StringPiece)` instead of `void base::Base64Encode(StringPiece, std::string*)`</a></td><td>K. M Merajul Arefin</td></tr>
+<tr><td>2024-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5158147'>Filter text processing items if Manage apps is supported</a></td><td>anukul.chand</td></tr>
+<tr><td>2024-01-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5143281'>Use base::Contains() instead of std::find()</a></td><td>Binoy Kumar Sutradhar</td></tr>
+<tr><td>2024-01-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5119418'>Used new switch expressions instead of old switch statements</a></td><td>K. M Merajul Arefin</td></tr>
+<tr><td>2023-12-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5133012'>Move Translate item to default group for WebView on Samsung devices</a></td><td>anukul.chand</td></tr>
+<tr><td>2023-12-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5058968'>Use std::string Base64Encode(StringPiece input) instead of void Base64Encode(StringPiece input, std::string* output)</a></td><td>Binoy Kumar Sutradhar</td></tr>
+<tr><td>2023-12-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5056936'>Refactor WebView javatests to use multiline strings</a></td><td>Binoy Kumar Sutradhar</td></tr>
+<tr><td>2023-12-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5113729'>Removing unnecessary &#x27;content::&#x27; from browser_main_loop.cc as its in content namespace.</a></td><td>Neehit Goyal</td></tr>
+<tr><td>2023-12-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5114826'>Convert enum to enum class for TableTypes</a></td><td>K. M. Merajul Arefin</td></tr>
+<tr><td>2023-12-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5039975'>Add Manage Apps selection menuitem in web view on Samsung devices</a></td><td>anukul.chand</td></tr>
+<tr><td>2023-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5108716'>Used `std::string base::Base64Encode(StringPiece)` instead of `void base::Base64Encode(StringPiece, std::string*)` in ash/ and chrome/browser/ash/</a></td><td>K. M. Merajul Arefin</td></tr>
+<tr><td>2023-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5108457'>Change std::find() to use base:: functions: ash/</a></td><td>K. M Merajul Arefin</td></tr>
+<tr><td>2023-12-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5116918'>Refactor javatests to use multiline strings</a></td><td>K. M. Merajul Arefin</td></tr>
+<tr><td>2023-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5107457'>[DanglingPointer] Remove dangling pointer in storage_unittest.cc</a></td><td>Naresh Pratap Singh</td></tr>
+<tr><td>2023-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5108856'>Revert^2 &quot;Use base::Erase/base::EraseIf()&quot;</a></td><td>K. M. Merajul Arefin</td></tr>
+<tr><td>2023-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5108856'>Use base::Erase/base::EraseIf()</a></td><td>K. M. Merajul Arefin</td></tr>
+<tr><td>2023-12-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5012038'>Remove SDK 11 check and removing method as it is not required anymore.</a></td><td>Naresh Pratap Singh</td></tr>
+<tr><td>2023-12-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5076197'>[DanglingPointer] Remove dangling pointer in</a></td><td>Chakshu Pragya</td></tr>
+<tr><td>2023-12-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5083402'>Use std::string Base64Encode(StringPiece input)</a></td><td>j1.pareek</td></tr>
+<tr><td>2023-12-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5034157'>Adjust selection menu order in web view on Samsung devices</a></td><td>anukul.chand</td></tr>
+<tr><td>2023-12-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5075563'>[Code Health] Removing unnecessary use of optional</a></td><td>Chakshu Pragya</td></tr>
+<tr><td>2023-12-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4895968'>Remove unused import in NotificationEventDispatcherImplTest</a></td><td>Leena Kaushik</td></tr>
+<tr><td>2023-12-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5075759'>Used `std::string base::Base64Encode(StringPiece)` instead of `void base::Base64Encode(StringPiece, std::string)`</a></td><td>K. M. Merajul Arefin</td></tr>
+<tr><td>2023-12-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5036003'>Use base::Contains() instead of std::find()</a></td><td>Binoy Kumar Sutradhar</td></tr>
+<tr><td>2023-12-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5075562'>Use base::EraseIf()</a></td><td>K. M Merajul Arefin</td></tr>
+<tr><td>2023-12-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5009613'>Use menuItemCount for setting order while adding menuItems</a></td><td>anukul.chand</td></tr>
+<tr><td>2023-11-30</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5074092'>Use base::Contains instead of std::find</a></td><td>K. M. Merajul Arefin</td></tr>
+<tr><td>2023-11-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5066757'>css: Make index optional in insertRule of CSSGroupingRule</a></td><td>Amos Lim</td></tr>
+<tr><td>2023-11-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4622851'>webauthn: Remove java tests DEPS exceptions for ClientDataJsonImpl</a></td><td>Euisang Lim</td></tr>
+<tr><td>2023-11-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5061913'>Converted DUMP_WILL_BE_CHECK to CHECK</a></td><td>neehit</td></tr>
+<tr><td>2023-11-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5012193'>Dangling pointer in</a></td><td>Aditya</td></tr>
+<tr><td>2023-11-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5065735'>Use std::string Base64Encode(StringPiece input)</a></td><td>Sakib Shabir Tantray</td></tr>
+<tr><td>2023-11-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5047556'>Refactor javatests  to use multiline strings</a></td><td>Sakib Shabir Tantray</td></tr>
+<tr><td>2023-11-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5064824'>Use base::Contains instead of std::find</a></td><td>K. M Merajul Arefin</td></tr>
+<tr><td>2023-11-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5048057'>Use base::Contains() instead of std or container::find()</a></td><td>fauzia.haque</td></tr>
+<tr><td>2023-11-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5033578'>Refactor WebView javatests to use multiline strings</a></td><td>Siddhartha Barman Joy</td></tr>
+<tr><td>2023-11-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5048431'>Use ErrorProne aware syntax for parameter comments in DirectWritingTrigger</a></td><td>syed.wajid</td></tr>
+<tr><td>2023-11-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5039753'>Naming the enums in MultiProfileUma class to match the style guide</a></td><td>neehit</td></tr>
+<tr><td>2023-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5034064'>Replace std::find with base::Contains</a></td><td>Aquibuzzaman Md. Sayem</td></tr>
+<tr><td>2023-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5028384'>Added null check for StylusWritingImeCallback in DirectWritingTrigger</a></td><td>syed.wajid</td></tr>
+<tr><td>2023-11-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5040273'>Renamed AddIban function to AddAsLocalIban</a></td><td>neehit</td></tr>
+<tr><td>2023-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5029295'>Refactor WebView javatests to use multiline strings</a></td><td>Amit Paul</td></tr>
+<tr><td>2023-11-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5029102'>Use base::Contains() instead of std::find()</a></td><td>Abdullah Abu Tasneem</td></tr>
+<tr><td>2023-11-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5032195'>[AF] Check and recreate Android view before usage</a></td><td>Arup Barua</td></tr>
+<tr><td>2023-11-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5016127'>Use base::Contains() instead of std::find()</a></td><td>Md. Sadiqul Amin</td></tr>
+<tr><td>2023-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5018569'>Convert AggregationCoordinator Type enum to enum class</a></td><td>Amit Paul</td></tr>
+<tr><td>2023-11-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5015426'>Naming the enums in MultiProfileUma class to match the style guide</a></td><td>Chakshu Pragya</td></tr>
+<tr><td>2023-11-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4666454'>Drop StylusHandwritingImeCallback reference when webContents is destroyed.</a></td><td>syed.wajid</td></tr>
+<tr><td>2023-11-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4617691'>Reland &quot;Set StylusHandwritingImeCallback when the web contents is updated&quot;</a></td><td>syed.wajid</td></tr>
 <tr><td>2023-11-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/5003546'>Replace std::find with base::Contains</a></td><td>Amit Paul</td></tr>
 <tr><td>2023-11-06</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4964841'>Use base::Contains() instead of std::find()</a></td><td>Md. Sadiqul Amin</td></tr>
 <tr><td>2023-11-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4929579'>Use structuredClone() API, instead of JSON.parse(JSON.stringify(...))</a></td><td>Anguluri Aravind Kumar</td></tr>
